# bp-debugger

./: .gitignore  README.md  pyproject.toml
debugger/bp_client/: build_frontend.sh
debugger/bp_client/backend/: client.py
debugger/bp_client/backend/static/_app/: version.json
debugger/bp_client/backend/static/_app/immutable/assets/: 2.2dfaeba9.css
debugger/bp_client/backend/static/_app/immutable/chunks/: index.63509a22.js  index.dbbeca6d.js  scheduler.703a0100.js  singletons.4fac1941.js
debugger/bp_client/backend/static/_app/immutable/entry/: app.e1feb7f4.js  start.6ea6820c.js
debugger/bp_client/backend/static/_app/immutable/nodes/: 0.04c1aced.js  1.db760dc8.js  2.2e9eaf09.js
debugger/bp_client/backend/templates/: index.html
debugger/bp_client/frontend/: package-lock.json  package.json  svelte.config.js
debugger/bp_client/frontend/src/lib/: breakpoint.ts
debugger/bp_server/: break_point.py  server.py
debugger/bp_server/server_bug/: stage_0.py  stage_2.json
debugger/client/frontend/src/: app.html
debugger/client/frontend/src/components/: BreakPoints.svelte  ParameterTable.svelte  PredicateSelect.svelte  SelectedEventList.svelte  SystemStateTable.svelte
debugger/client/frontend/src/lib/: defintions.ts
debugger/client/frontend/src/routes/: +page.svelte
debugger/client/frontend/static/: svelte-dark.css  svelte.css
debugger/examples/: tic_tac_toe.py  water_tank.py
debugger/examples/water_tank_bug/: stage_0.json  stage_0.py  stage_1.json  stage_1.py  stage_2.py  stage_3.py
debugger/server/: listener.py
